# spotify-buddylist

./: .gitignore  README.md  requirements_dev.txt  setup.cfg  setup.py
scripts/: tag.ps1
spotify-friends/: async.py  models.py  sync.py
src/spotify-buddylist/: __init__.py
src/spotify_buddylist/: __init__.py  async_api.py  models.py  sync_api.py
tests/: test_readme.py  test_sync.py  utils.py
