[metadata]
name = spotify_buddylist
version = attr: spotify_buddylist.__version__
author = Vincent Lin
author_email = vinlin24@outlook.com
license = MIT
license_file = LICENSE
description = Get Spotify friend activity
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vinlin24/spotify-buddylist
project_urls =
    Bug Tracker = https://github.com/vinlin24/spotify-buddylist/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
python_requires = >=3.8
